# ormx

example-mysql/: Cargo.toml
example-mysql/src/: main.rs
example-postgres/: Cargo.toml
example-postgres/src/: main.rs
ormx/: Cargo.toml
ormx-macros/: Cargo.toml
ormx-macros/src/: attrs.rs
ormx-macros/src/backend/common/: mod.rs  table.rs
ormx-macros/src/backend/mysql/: insert.rs
ormx-macros/src/backend/postgres/: insert.rs
ormx-macros/src/patch/: mod.rs  parse.rs
ormx-macros/src/table/: mod.rs  parse.rs
