[package]
    authors = ["moritz", "Matt Fellenz", "Kura"]
    edition = "2018"
    name    = "example-postgres"
    version = "0.1.0"

[dependencies]
    anyhow        = "1"
    chrono        = "0.4"
    dotenv        = "0.15"
    log           = "0.4"
    ormx          = { path = "../ormx", features = ["postgres"] }
    simple_logger = "4"
    tokio         = { version = "1.1", features = ["full"] }

    [dependencies.sqlx]
        default-features = false
        features = [
            "macros",
            "postgres",
            "runtime-tokio-rustls",
            "chrono",
        ]
        version = "0.7"
