[package]
    authors     = ["moritz", "Matt Fellenz", "Kura"]
    description = "lightweight procedural macros bringing orm-like features to sqlx"
    edition     = "2018"
    homepage    = "https://github.com/mattfbacon/ormx"
    license     = "MIT"
    name        = "ormx-macros"
    version     = "0.10.4"

[lib]
    proc-macro = true

[features]
    mysql    = []
    postgres = []
    sqlite   = []

[dependencies]
    itertools        = "0.11"
    once_cell        = "1"
    proc-macro-error = "1"
    proc-macro2      = "1"
    quote            = "1"
    syn              = { version = "2", features = ["full"] }
