[package]
    authors     = ["Moritz Bischof", "Matt Fellenz", "Kura"]
    description = "lightweight procedural macros bringing orm-like features to sqlx"
    edition     = "2018"
    homepage    = "https://github.com/mattfbacon/ormx"
    license     = "MIT"
    name        = "ormx"
    repository  = "https://github.com/mattfbacon/ormx"
    version     = "0.10.0"

    [package.metadata.docs.rs]
        features = ["_docs-rs-build"]
        targets  = ["x86_64-unknown-linux-gnu"]

[features]
    mysql    = ["sqlx/mysql", "ormx-macros/mysql"]
    postgres = ["sqlx/postgres", "ormx-macros/postgres"]
    sqlite   = ["sqlx/sqlite", "ormx-macros/sqlite"]

    _docs-rs-build = ["sqlx/runtime-tokio-rustls", "postgres"]

[dependencies]
    futures     = "0.3"
    ormx-macros = { path = "../ormx-macros", version = "0.10" }

    [dependencies.sqlx]
        default-features = false
        features         = ["macros"]
        version          = "0.7"

[dev-dependencies]
    anyhow = "1"
    tokio  = { version = "1.1", features = ["full"] }
